infra/k8s/production/ingress-nginx-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: accounts.tiendadata.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 3001
    - host: transactions.tiendadata.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: transaction-processor-api
                port:
                  number: 3000
    - host: transactions-compliance.tiendadata.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: transaction-compliance-service
                port:
                  number: 3002
    - host: grafana-transactions.tiendadata.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
